# pazzle-tactics

./: Cargo.toml  game_design.md  index.html  tech_stack.md
docs/: bomb_mechanics.md
src/: camera.rs  lib.rs  main.rs  prelude.rs  state.rs
src/battle/: combat.rs  game_result.rs  hex_grid.rs  mod.rs  synergy.rs  unit.rs  wave.rs
src/bridge/: events.rs  mod.rs
src/puzzle/: board.rs  cascade.rs  input.rs  match_detector.rs  mod.rs  obstacle.rs  tile.rs
src/ui/: hud.rs  mod.rs
